--- a/docs/_includes/sidemenu.htm
+++ b/docs/_includes/sidemenu.htm
@@ -2,16 +2,15 @@
 
 <!-- NEW MENU DESIGN -->
 
-<h3 id="before-starting">Before starting</h3>
-<div class="panel-group">
 
-    <div class="panel panel-default">
-        <div class="panel-heading"  >
-            <div class="panel-title" >
-                <button class="arrow_down" data-toggle="collapse" data-target="#overview_collapse"></button>
-                <a  href="{{ site.url }}/Overview/" >Overview</a>
-            </div>
+<div class="panel-group">
+    <h3 id="before-starting">Before starting</h3>
+    <div class="panel">
+		<div class="panel-title" >
+			<button class="arrow_down" data-toggle="collapse" data-target="#overview_collapse"></button>
+            <a  href="{{ site.url }}/Overview/" >Overview</a>
         </div>
+
         <div id="overview_collapse" class="panel-collapse collapse">
             <ul class="list-group">
                 <li class="list-group-item"><a href="{{ site.url }}/Overview/Developing-for-DotKernel-3.html">Developing for DotKernel 3</a></li>
@@ -20,15 +19,13 @@
         </div>
     </div>
     
-    <div class="panel panel-default">
-        <div class="panel-heading"  >
-            <div class="panel-title" >
-                <button class="arrow_down" data-toggle="collapse" data-target="#prerequisites_collapse"></button>
-                <a  href="{{ site.url }}/Prerequisites/" >Prerequisites</a>
-            </div>
+    <div class="panel">
+		<div class="panel-title" >
+			<button class="arrow_down" data-toggle="collapse" data-target="#prerequisites_collapse"></button>
+ 			<a  href="{{ site.url }}/Prerequisites/" >Prerequisites</a>
         </div>
-        <div id="prerequisites_collapse" class="panel-collapse collapse">
 
+        <div id="prerequisites_collapse" class="panel-collapse collapse">
             <ul class="list-group">
                 <li class="list-group-item"><a href="{{ site.url }}/Prerequisites/Closures-and-Callables.html">Closures and Callables</a></li>
                 <li class="list-group-item">PSR-4: Autoloading</li>
@@ -43,19 +40,17 @@
                 <li class="list-group-item">Zend Expressive</li>
                 <!--  <li class="list-group-item">Stratigility vs. Expressive (? Benefits of Expressive)</li>  -->
             </ul>
-
         </div>
     </div>
 
 
 <h3 id="before-starting">Introduction</h3>
-    <div class="panel panel-default">
-        <div class="panel-heading"  >
-            <div class="panel-title" >
-                <button class="arrow_down" data-toggle="collapse" data-target="#getting_started_collapse"></button>
-                <a  href="{{ site.url }}/Getting-Started/" >Getting Started</a>
-            </div>
+    <div class="panel">
+		<div class="panel-title" >
+			<button class="arrow_down" data-toggle="collapse" data-target="#getting_started_collapse"></button>
+            <a  href="{{ site.url }}/Getting-Started/" >Getting Started</a>
         </div>
+
         <div id="getting_started_collapse" class="panel-collapse collapse">
             <ul class="list-group">
                 <li class="list-group-item"><a href="{{ site.url }}/Getting-Started/Server-Requirements.html">Server Requirements</a></li>
@@ -65,11 +60,13 @@
                 <li class="list-group-item">DotKernel 3 features</li>
             </ul>
         </div>
-        
-        <div class="panel-title" >
-            <button class="arrow_down" data-toggle="collapse" data-target="#tutorials_collapse"></button>
+    </div>
+    <div class="panel">
+		<div class="panel-title" >
+			<button class="arrow_down" data-toggle="collapse" data-target="#tutorials_collapse"></button>
             <a  href="{{ site.url }}/Tutorials/" >Tutorials</a>
         </div>
+
         <div id="tutorials_collapse" class="panel-collapse collapse">
             <ul class="list-group">
                 <li class="list-group-item"><a href="{{ site.url }}/Tutorials/Creating-a-Contact-Us-Page/">Creating a Contact US Page</a></li>
@@ -80,13 +77,12 @@
 
 <h3 id="before-starting">Working with DotKernel 3</h3>
 
-    <div class="panel panel-default">
-        <div class="panel-heading"  >
-            <div class="panel-title" >
-                <button class="arrow_down" data-toggle="collapse" data-target="#guidelines_collapse"></button>
-                <a  href="{{ site.url }}/Guidelines/" >Guidelines</a>
-            </div>
+    <div class="panel">
+		<div class="panel-title" >
+			<button class="arrow_down" data-toggle="collapse" data-target="#guidelines_collapse"></button>
+			<a  href="{{ site.url }}/Guidelines/" >Guidelines</a>
         </div>
+
         <div id="guidelines_collapse" class="panel-collapse collapse">
             <ul class="list-group">
                 <li class="list-group-item"><a href="{{ site.url }}/Guidelines/PSR/">PSR Guidelines</a></li>
@@ -97,13 +93,12 @@
             </ul>
         </div>
     </div>
-    <div class="panel panel-default">
-        <div class="panel-heading"  >
-            <div class="panel-title" >
-                <button class="arrow_down" data-toggle="collapse" data-target="#dot_packages_collapse"></button>
-                <a  href="{{ site.url }}/Packages/" >dot-* packages</a>
-            </div>
+    <div class="panel">
+		<div class="panel-title" >
+			<button class="arrow_down" data-toggle="collapse" data-target="#dot_packages_collapse"></button>
+            <a  href="{{ site.url }}/Packages/" >dot-* packages</a>
         </div>
+
         <div id="dot_packages_collapse" class="panel-collapse collapse">
             <ul class="list-group">
                 <li class="list-group-item"><a href="{{ site.url }}/Packages/README.html">View dot-* package list</a></li>
