--- a/docs/assets/css/dk3docs.css
+++ b/docs/assets/css/dk3docs.css
@@ -37,7 +37,7 @@ header.navbar .container { max-width: 100%; padding-bottom: 0; padding-left: 50p
 .navbar .navbar-nav > li > a { color: #828282; }
 .navbar-default .navbar-toggle .icon-bar { background-color: #c71f3a; }
 
-.navbar-default .navbar-toggle { border: none; }
+.navbar-default .navbar-toggle { border: none; margin-right: 0px; }
 .navbar-default .navbar-toggle:hover { background-color: transparent; }
 
 .main_page_title { background-color: #BE2040; padding: 20px 50px; margin-bottom: 50px; }
@@ -60,7 +60,7 @@ header.navbar .container { max-width: 100%; padding-bottom: 0; padding-left: 50p
 #dk3DocsSideMenu h3 { color: #6d6d6d; font-size: 20px; font-weight: normal; padding-bottom: 10px; position: relative; }
 #dk3DocsSideMenu  ul { padding-left: 0px; }
 #dk3DocsSideMenu  ul li:first-child { padding-top: 0; }
-#dk3DocsSideMenu ul li { border-bottom-color: #e2e2e2; border-bottom-style: solid; border-bottom-width: 1px; list-style-image: none; list-style-position: outside; list-style-type: none; padding-bottom: 8px; padding-left: 0; padding-right: 0; padding-top: 8px; }
+#dk3DocsSideMenu ul li { border-bottom-color: #e2e2e2; border-bottom-style: solid; border-bottom-width: 1px; list-style-image: none; list-style-position: outside; list-style-type: none; padding-bottom: 0px; padding-left: 0; padding-right: 0; padding-top: 8px; }
 #dk3DocsSideMenu ul li a { font-size: 16px; color: #808080; }
 
 .edit { text-align: right; }
@@ -78,6 +78,8 @@ header.navbar .container { max-width: 100%; padding-bottom: 0; padding-left: 50p
 
 @media (max-width: 991px) {
 	header.navbar .container { max-width: 750px; }
+	.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover { background-color: transparent; }
+	.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .open > a { box-shadow: none; }
 }
 
 @media (max-width: 767px) {
@@ -94,7 +96,7 @@ header.navbar .container { max-width: 100%; padding-bottom: 0; padding-left: 50p
 	.page-title.centered h1 { font-size: 200% ; }
 	.page-title.left { padding-right: 0px; }
 	.page-title.left h1 { font-size: 170%; line-height: 30px; }
-	.navbar-toggle { left: 20px; top: 15px; }
+	.navbar-toggle { top: 15px; }
 	.caret { display: inline-block; }
 	.footer-btm-bar ul li a{  line-height: 0; font-size: 0; color: transparent; }
 	.footer-btm-bar ul li { display: inline; }
@@ -109,13 +111,18 @@ header.navbar .container { max-width: 100%; padding-bottom: 0; padding-left: 50p
 .panel-default > .panel-heading { background-image: none; background-color: #fff; border: none; }
 .panel-group .panel-heading + .panel-collapse > .list-group, .panel-group .panel-heading + .panel-collapse > .panel-body { border: none; }
 .list-group { box-shadow: none; border-radius: 0; background-color: #fff; }
-.list-group-item { background-color: #fff; margin-top: 10px; }
+.list-group-item { background-color: #fff; margin-top: 10px; padding-bottom: 0px; }
 #dk3DocsSideMenu ul { padding-left: 40px; }
 #dk3DocsSideMenu ul li { border: none; }
 #dk3DocsSideMenu a:hover { text-decoration: none; }
 #dk3DocsSideMenu a:active { color: #BE2040; }
 
 
-button { width: 20px; height: 13px; margin-top: -18px; }
+.arrow_down { width: 20px; height: 13px; margin-top: -18px; }
 <!-- arrows moved in styling.htm -->
 .smallerFont { font-size: 13px; }
+
+table { width: 100%; }
+table thead th { background-color: #fff; padding: 8px; }
+table tr:nth-of-type(2n+1) { background-color: #f9f9f9; }
+table, tr, td { border: 1px solid #ddd; padding: 8px; }
