--- a/docs/_includes/styling.htm
+++ b/docs/_includes/styling.htm
@@ -5,7 +5,7 @@
 
 
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -26,6 +26,8 @@
  Please do not use static resources or URL's in css, any URL should be reflected here 
 -->
 <style>
+#sidebar .menu-title { background-image: url('{{ site.url }}/assets/images/arrow_down.png'); background-position: left; background-repeat: no-repeat; background-size: 17px 8px; border: none; background-color: transparent; }
+#sidebar .submenu-title { background-image: url('{{ site.url }}/assets/images/arrow_down.png'); background-position: left; background-repeat: no-repeat; background-size: 13px 6px; border: none; background-color: transparent; }
 .arrow_down { background-image: url('{{ site.url }}/assets/images/arrow_down.png'); background-position: center; background-repeat: no-repeat; background-size: 14px 7px; border: none; background-color: transparent; }
 .arrow_up { background-image: url('{{ site.url }}/assets/images/arrow_up.png'); background-position: center; background-repeat: no-repeat; background-size: 14px 7px; border: none; background-color: transparent; }
 .logo-main{ width: 171px; height: 40px; }
