--- a/docs/assets/css/dk3docs.css
+++ b/docs/assets/css/dk3docs.css
@@ -7,82 +7,338 @@
  * Use `_includes/styling.htm` for this
 */
 
-html, body { min-height: 100%; height: 100%; }
-body {  min-height: 100%; height: 100%; }
-#wrapper { min-height: 100%; height: auto !important; margin-bottom: -100px; margin-left: auto; margin-right: auto; margin-top: 0; }
+html, body {
+	min-height: 100%;
+	height: 100%;
+}
+
+body {
+	min-height: 100%;
+	height: 100%;
+}
+
+#wrapper {
+	min-height: 100%;
+	height: auto !important;
+	margin-bottom: -100px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 0;
+}
+
+body,
+p {
+	font-family: Source Sans Pro;
+	font-size: 16px;
+	font-weight: 300;
+}
+
+body a {
+	color: #2b8dd6;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family:Montserrat;
+	font-weight: 500;
+	color: #515151;
+}
+
+h2 {
+	font-size: 28px;
+}
+
+h3 {
+	font-size: 22px;
+}
+
+h4 {
+	font-size: 20px;
+}
+
+h5 {
+	font-size: 18px;
+}
+
+h6 {
+	font-size: 15px;
+}
+
+.banner {
+	box-shadow: 0 1px 2px rgba(43, 48, 51, 0.08);
+	z-index: 20;
+}
+
+@media (min-width: 1200px) {
+	.header {
+		padding: 10px 50px;
+	}
+}
+
+.navbar .navbar-nav > li {
+	line-height: 30px;
+}
+
+.navbar .navbar-nav > li > a {
+	padding: 0px 15px;
+	color: #828282;
+	font-family: Montserrat;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 30px;
+}
+
+.navbar .navbar-nav > li > a:focus,
+.navbar .navbar-nav > li > a:hover {
+	color: #333;
+	background-color: transparent;
+	text-decoration: none;
+}
+
+.navbar .dropdown-menu a {
+	font-size: 14px;
+	line-height: 20px;
+}
+
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover {
+	color: #828282;
+}
+
+.navbar-light .navbar-toggle .icon-bar {
+	background-color: #c71f3a;
+}
+
+.navbar-toggler {
+	padding: 0px;
+	border: none;
+	margin-right: 0px;
+}
+
+.navbar-toggler:hover {
+	background-color: transparent;
+}
+
+.navbar-light .navbar-toggler-icon {
+	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(190, 32, 64, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
+@media (max-width: 767px) {
+	.navbar .navbar-nav > li {
+		padding: 5px 0px;
+	}
+	
+	.dropdown-menu {
+		border: 0px;
+	}
+	
+	.navbar .dropdown-menu a {
+		font-size: 16px;
+	}
+	
+	.dropdown-item {
+		padding: 5px 25px;
+	}
+	
+	.dropdown-item:focus,
+	.dropdown-item:hover {
+		background-color: #FFFFFF; 
+	}
+	
+	.navbar .navbar-collapse {
+		margin-top: 10px;
+		padding-top: 5px;
+		border-top: 1px solid #e7e7e7;
+	}
+}
+
+@media (min-width: 1200px) {
+	.main-page-title .container {
+		max-width: 100%;
+	}
+}
+
+.main-page-title {
+	display: block;
+	width: 100%;
+	background-color: #BE2040;
+	margin-bottom: 50px;
+}
+
+.main-page-title .page-title {
+	padding: 20px 50px;
+}
+
+.main-page-title h1 {
+	margin: 0px;
+	color: #fff;
+	text-transform: uppercase;
+	font-weight: 500;
+	font-size: 18px;
+}
+
+.main-content { background-color: #fff; padding-bottom: 50px; }
+
+.main-content .edit {
+	text-align: right;
+}
+
+.main-content .edit-button {
+	background-color: transparent;
+	border: none;
+}
+
+.main-content .smallerFont {
+	font-size: 13px;
+}
+
+.main-content .md-html h1,
+.main-content .md-html h2,
+.main-content .md-html h3,
+.main-content .md-html h4,
+.main-content .md-html h5,
+.main-content .md-html h6 {
+	padding-top: 20px;
+	color: #1a1a1a;
+}
+
+.main-content .md-html h1 {
+	font-size: 40px;
+}
+
+.main-content .md-html h2 {
+	font-size: 24px;
+}
 
 
-body,p{font-family:Source Sans Pro ;font-size:16px ;font-weight:300 ;}
-body a{ color: #2b8dd6; }
 
 
-.navbar .navbar-nav > li > a{font-family:Montserrat ;font-size:16px ;font-weight:400 ;}
-h1, h2, h3, h4, h5, h6{font-family:Montserrat ;font-weight: 500 ; color: #515151;}
+#sidebar .list-group-item.menu-title {
+	padding-left: 25px;
+	color: #6d6d6d;
+	font-size: 20px;
+	font-weight: normal;
+	font-family: Montserrat;
+}
 
-h2 { font-size: 28px; }
-h3 { font-size: 22px; }
-h4 { font-size: 20px; }
-h5 { font-size: 18px; }
-h6 { font-size: 15px; }
+#sidebar .list-group-item {
+	padding: 0px;
+	border: 0px;
+}
 
-.navbar { background-color: #fff; margin-bottom: 0; }
-.navbar-default { background-image: none; }
-.banner { box-shadow: 0 1px 2px rgba(43, 48, 51, 0.08); z-index: 20; }
+#sidebar .collapse-sublevel {
+	padding-left: 20px;
+}
 
-.navbar .navbar-nav { float: right; margin-top: 12px; }
+#sidebar .list-group-item.submenu-title {
+	padding-left: 20px;
+	color: #6d6d6d;
+	font-size: 16px;
+	font-weight: normal;
+}
 
-#logo { display: block; float: left; margin-bottom: 20px; margin-left: 0; margin-right: 0; margin-top: 20px; }
-header.navbar .container { max-width: 100%; padding-bottom: 0; padding-left: 50px; padding-right: 50px; padding-top: 0; width: 100%; }
-.logo-reg { height: 40px; width: 171px; }
-.navbar .navbar-nav > li > a { color: #828282; }
-.navbar-default .navbar-toggle .icon-bar { background-color: #c71f3a; }
+#sidebar .list-group-item {
+	color: #6d6d6d;
+	font-size: 16px;
+	font-weight: normal;
+}
 
-.navbar-default .navbar-toggle { border: none; margin-right: 0px; }
-.navbar-default .navbar-toggle:hover { background-color: transparent; }
+#sidebar .list-group-item.active {
+	background: transparent;
+	color: #000000;
+}
 
-.main_page_title { background-color: #BE2040; padding: 20px 50px; margin-bottom: 50px; }
 
 
 
-.page-title h1 { color: #fff; text-transform: uppercase; font-weight: 500; font-size: 18px; }
+#push,
+footer {
+	height: 100px;
+	clear:both;
+}
 
-.inner-container { background-color: #fff; padding-bottom: 50px; }
+.footer-btm-bar {
+	padding: 25px 0px 15px 0px;
+	background-attachment: scroll;
+	background-clip: border-box;
+	background-color: #F7F7F7;
+	background-image: none;
+	background-origin: padding-box;
+	background-position-x: 0;
+	background-position-y: 0;
+	background-repeat: repeat;
+	background-size: auto auto;
+	width: 100%;
+}
 
-#push, footer { height: 100px; clear:both;}
-.footer-btm-bar { background-attachment: scroll; background-clip: border-box; background-color: #F7F7F7; background-image: none; background-origin: padding-box; background-position-x: 0;background-position-y: 0; background-repeat: repeat; background-size: auto auto; width: 100%; padding: 25px 0px 15px 0px; }
-.footer-btm-bar span { font-size: 16px; color: #808080; font-weight: 500; }
-.footer-btm-bar ul { list-style-type: none; padding-left: 0px; }
-.footer-btm-bar ul li img { width: 50px;  padding-right: 5px; }
-.footer-btm-bar ul li { padding: 0px 10px 10px 0px; display: inline-block; }
-.footer-btm-bar ul li a { color: #808080; }
+.footer-btm-bar span {
+	font-size: 16px;
+	color: #808080;
+	font-weight: 500;
+}
+
+.footer-btm-bar ul {
+	padding-left: 0px;
+	list-style-type: none;
+}
+
+.footer-btm-bar ul li img {
+	padding-right: 5px;
+	width: 50px;
+}
+
+.footer-btm-bar ul li {
+	display: inline-block;
+	padding: 0px 10px 10px 0px;
+}
+
+.footer-btm-bar ul li a {
+	color: #808080;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 #dk3DocsSideMenu h3 { color: #6d6d6d; font-size: 20px; font-weight: normal; padding-bottom: 10px; position: relative; }
 #dk3DocsSideMenu  ul { padding-left: 0px; }
 #dk3DocsSideMenu  ul li:first-child { padding-top: 0; }
-#dk3DocsSideMenu ul li { border-bottom-color: #e2e2e2; border-bottom-style: solid; border-bottom-width: 1px; list-style-image: none; list-style-position: outside; list-style-type: none; padding-bottom: 0px; padding-left: 0; padding-right: 0; padding-top: 8px; }
+#dk3DocsSideMenu ul li { border-bottom-color: #e2e2e2; border-bottom-style: solid; 
+border-bottom-width: 1px; list-style-image: none; list-style-position: outside; list-style-type: none; padding-bottom: 0px; padding-left: 0; padding-right: 0; padding-top: 8px; }
 #dk3DocsSideMenu ul li a { font-size: 16px; color: #808080; }
 
-.edit { text-align: right; }
-.edit_button { background-color: transparent; border: none; }
-.main h1, h2, h3, h4, h5, h6 { padding-top: 20px; color: #1a1a1a; }
-.main h1 { font-size: 40px; }
-.main h2 { font-size: 24px; }
-.main li a { color: #2046a4;  }
+
 .main li a:hover { text-decoration: none; }
 .caret { display: none; }
 
-@media (max-width: 1200px) {
-	header.navbar .container { max-width: 970px; padding: 0px 15px; }
-}
 
-@media (max-width: 991px) {
+/*@media (max-width: 991px) {
 	header.navbar .container { max-width: 750px; }
 	.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover { background-color: transparent; }
 	.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .open > a { box-shadow: none; }
-}
+}*/
 
-@media (max-width: 767px) {
+/*@media (max-width: 767px) {
 	header.navbar .container { max-width: 100% !important; padding: 0px 30px; }
 	.navbar .navbar-nav { float: left; }
 	.navbar {  background-color: #FFFFFF; }
@@ -103,7 +359,7 @@ header.navbar .container { max-width: 100%; padding-bottom: 0; padding-left: 50p
 	.footer-btm-bar ul { text-align: center; }
 	.footer-btm-bar p { text-align: center; padding: 10px 0px; }
 	
-}
+}*/
 .panel { box-shadow: none; }
 .panel .panel-title a { font-size: 16px; color: #808080; }
 .panel-default { border: none; background-color: #fff; }
@@ -112,15 +368,14 @@ header.navbar .container { max-width: 100%; padding-bottom: 0; padding-left: 50p
 .panel-group .panel-heading + .panel-collapse > .list-group, .panel-group .panel-heading + .panel-collapse > .panel-body { border: none; }
 .list-group { box-shadow: none; border-radius: 0; background-color: #fff; }
 .list-group-item { background-color: #fff; margin-top: 10px; padding-bottom: 0px; }
-#dk3DocsSideMenu ul { padding-left: 40px; }
-#dk3DocsSideMenu ul li { border: none; }
+
 #dk3DocsSideMenu a:hover { text-decoration: none; }
 #dk3DocsSideMenu a:active { color: #BE2040; }
 
 
 .arrow_down { width: 20px; height: 13px; margin-top: -18px; }
 <!-- arrows moved in styling.htm -->
-.smallerFont { font-size: 13px; }
+
 
 table { width: 100%; }
 table thead th { background-color: #fff; padding: 8px; }
